--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
   build-and-test:
     docker:
-      - image: "cimg/node:stable"
+      - image: "cimg/node:18.17.0"
     steps:
       - checkout
       - node/install:
