--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           node-version: "18.17.0"
       - node/install-packages
       - run:
-          command: npm run test
+          command: yarn test
 workflows:
   build-and-test:
     jobs:
