ci: override ci command to install dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,8 @@ jobs:
       - checkout
       - node/install:
           node-version: "18.17.0"
-      - node/install-packages
+      - node/install-packages:
+          override-ci-command: yarn install
       - run:
           command: yarn test
 workflows:
